# seismoai

./: .gitignore  README.md  integration_test.py  pyproject.toml  requirements.txt
seismoai_io/: __init__.py  io_core.py
seismoai_io/tests/: test_io.py
seismoai_viz/: __init__.py  viz_core.py
viz_package/: README.md  pyproject.toml
viz_package/seismoai_viz/: viz_core.py
viz_package/seismoai_viz/tests/: test_viz.py
