[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seismoai"
version = "0.1.0"
description = "A Python package for seismic data analysis and visualization"
authors = [
    {name = "M Usman Bin Younas", email = "your.email@example.com"},
]
dependencies = [
    # Add your project dependencies here
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seismoai*", "seismoai_io*", "seismoai_viz*"]