[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seismoai-io-USM-JZB2"
version = "0.1.0"
description = "SeismoAI I/O module - load and prepare SGY seismic files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "M Usman Bin Younas"},
    {name = "Jazib Noel"},
]
dependencies = [
    "segyio>=1.9",
    "numpy>=1.21",
    "pandas>=1.3",
]

[tool.setuptools.packages.find]
include = ["seismoai_io*"]